k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pigeon
  labels:
    step-ca/inject: "enabled"
