k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app.kubernetes.io/name: pigeon-api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pigeon-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pigeon-api
    spec:
      containers:
        - name: main
          image: registry.home.arpa/pigeon-api:latest
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "256Mi"
          readinessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 3
          ports:
            - containerPort: 8080
