k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  labels:
    app.kubernetes.io/name: pigeon-ui
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pigeon-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pigeon-ui
    spec:
      containers:
        - name: main
          image: registry.home.arpa/pigeon-ui:latest
          resources:
            requests:
              cpu: "500m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 3
            periodSeconds: 3
          ports:
            - containerPort: 80
