k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pigeon-api
  ports:
    - name: web
      port: 8080
      targetPort: 8080
