k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pigeon-ui
  ports:
    - name: web
      port: 80
      targetPort: 80
