k8s/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: pigeon-tls
  routes:
    - match: Host(`pigeon.kabanos.xyz`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api-service
          port: 8080
    - match: Host(`pigeon.home.arpa`)
      kind: Rule
      services:
        - name: ui-service
          port: 80
